--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -26,7 +26,7 @@
   border: 2px solid transparent;
 }
 h2 {
-  color: var(--primary-accent);
+  color: white;
   text-shadow: 0 0 10px var(--secondary-accent);
   font-weight: bold;
 }
