--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -18,9 +18,8 @@
 .skills-title {
   font-size: 2.5rem;
   margin-bottom: 2rem;
-  color: var(--secondary-accent-color);
+  color: white;
   font-family: "Orbitron", sans-serif;
-  text-shadow: 0 0 10px var(--secondary-accent-color), 0 0 20px var(--secondary-accent-color);
 }
 
 .skills-container {
