--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,7 +1,7 @@
  :root { --background-color: #0D0D0D; --primary-text-color: #EAEAEA; --secondary-text-color: #A1A1A1; --primary-accent-color: #8A2BE2; --secondary-accent-color: #FF6B00; --icon-border-color: #6F42C1;
 --globe-primary: #00aaff; /* Light Blue / --globe-secondary: #001f3f; / Dark Blue / --globe-border: #ffffff; / White Border / --globe-shadow: rgba(0, 0, 0, 0.5); / Shadow / --location-text: var(--primary-text-color); / Using your existing text color */ }
 body { background-color: var(--background-color); color: var(--primary-text-color); font-family: Arial, sans-serif; margin: 0; padding: 0; }
-.navbar { position: relative; top: 0; left: 0; width: 100%; height: 70px; display: flex; align-items: center; justify-content: space-between; background: rgba(0, 0, 0, 0.2); backdrop-filter: blur(15px); -webkit-backdrop-filter: blur(15px); border-bottom: 1px solid rgba(255, 255, 255, 0.1); box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); transition: 0.3s ease-in-out; z-index: 1000; }
+.navbar { position: relative; top: 30px; left: 0; width: 100%; height: 70px; display: flex; align-items: center; justify-content: space-between; background: rgba(0, 0, 0, 0.2); backdrop-filter: blur(15px); -webkit-backdrop-filter: blur(15px); border-bottom: 1px solid rgba(255, 255, 255, 0.1); box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); transition: 0.3s ease-in-out; z-index: 1000; }
 .navbar.scrolled { background: rgba(0, 0, 0, 0.6); box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.7); }
 .logotext { font-size: 23px; Color: white; text-decoration: none; font-weight: 800; transform: scale(0.9); margin-left: 20px; }
 .logotext:hover { transform: scale(0.7); }
